# CodexPeek

./: .gitignore  AGENTS.md  Cargo.toml  README.ko.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs  build_support.rs
.github/workflows/: release.yml  windows-ci.yml
.superpowers/sdd/: progress.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md
docs/: RELEASE_CHECKLIST.md
docs/superpowers/plans/: 2026-07-21-codex-usage-monitor.md  2026-07-22-compact-taskbar-glass-widget.md
docs/superpowers/specs/: 2026-07-22-taskbar-glass-widget-design.md
src/: app.rs  config.rs  diagnostics.rs  domain.rs  errors.rs  lib.rs  localization.rs  main.rs  poller.rs  update_check.rs
src/codex/: app_server.rs  locator.rs  mod.rs  process.rs
src/windows/: autostart.rs  lifecycle.rs  mod.rs  native.rs  taskbar.rs  taskbar_widget.rs  tray.rs  widget.rs
src/windows/autostart/: platform.rs
src/windows/native/: platform.rs
src/windows/taskbar/: platform.rs
src/windows/tray/: platform.rs
tests/: build_resources.rs  config_runtime.rs  diagnostics_runtime.rs  localization_runtime.rs  poller_runtime.rs  update_check_runtime.rs  windows_app.rs
