[package]
name = "codex-usage-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
dirs = "6.0"
native-tls = "0.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.1", default-features = false, features = ["native-tls"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
